[metadata]
name = pathfind
version = 0.0.9
author = MorvanZhou
author_email = morvanzhou@hotmail.com
description = path finding algorithms in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MorvanZhou/pathfind
project_urls =
    Bug Tracker = https://github.com/MorvanZhou/pathfind/issues
    Source=https://github.com/MorvanZhou/pathfind
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib >=3.3.4
    igraph >=0.10.2

[options.packages.find]
where = src

[options.extras_require]
build =
    tox==3.24.3
    tox-conda
    build
    twine
    pylint
    line_profiler
